--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My Electron App</title>
+    <meta charset="UTF-8">
+    <title>ARK Settings</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
-    <h1>Hello, Electron!</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
