--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -10,7 +10,16 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="pages/view_settings.html">View</a></li>
+        <li><a href="pages/manage_settings.html">Manage</a></li>
+        <li><a href="pages/share_setttings.html">Share</a></li>
       </ul>
     </nav>
+    
+    <div id="container" style="text-align: center;">
+      <h1> ARK Settings </h1>
+      <p>This app will let you view, manage and share your ARK settings with other users 😁</p>
+      <p>Please select one of the options at the top to begin.</p>
+    </div>
   </body>
 </html>
