Added tiles to the home page for the three main pages.

--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -16,10 +16,38 @@
       </ul>
     </nav>
     
+    <!-- Welcome message -->
     <div id="container" style="text-align: center;">
       <h1> ARK Settings </h1>
       <p>This app will let you view, manage and share your ARK settings with other users 😁</p>
       <p>Please select one of the options at the top to begin.</p>
+    </div>
+
+    <!-- Tiles -->
+    <div class="tile-container">
+      <!-- View Tile -->
+      <div class="tile">
+        <button onclick="location.href='pages/view_settings.html'">
+          <h2>View Settings</h2>
+          <p>View and analyse your ARK settings.</p>
+        </button>
+      </div>
+
+      <!-- Manage Tile -->
+      <div class="tile">
+        <button onclick="location.href='pages/manage_settings.html'">
+          <h2>Manage Settings</h2>
+          <p>Manage and configure your ARK settings.</p>
+        </button>
+      </div>
+
+      <!-- Share Tile -->
+      <div class="tile">
+        <button onclick="location.href='pages/share_settings.html'">
+          <h2>Share Settings</h2>
+          <p>Share your ARK settings with others.</p>
+        </button>
+      </div>
     </div>
   </body>
 </html>
