Slightly adjusted the text.

--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -19,9 +19,11 @@
     <!-- Welcome message -->
     <div id="container" style="text-align: center;">
       <h1> ARK Settings </h1>
-      <p>This app will let you view, manage and share your ARK settings with other users 😁</p>
-      <p>Please select one of the options at the top to begin.</p>
+      <p>This app will let you view your current settings, manage them and/or share your ARK settings with other users. 😁</p>
+      <p>Please select one of the options below to begin.</p>
     </div>
+
+    <br><br><br>
 
     <!-- Tiles -->
     <div class="tile-container">
