Corrected a spelling mistake in the name of the share_settings page.

--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -12,7 +12,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="pages/view_settings.html">View</a></li>
         <li><a href="pages/manage_settings.html">Manage</a></li>
-        <li><a href="pages/share_setttings.html">Share</a></li>
+        <li><a href="pages/share_settings.html">Share</a></li>
       </ul>
     </nav>
     
