--- a/my-electron-app/pages/view_settings.html
+++ b/my-electron-app/pages/view_settings.html
@@ -12,7 +12,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="view_settings.html">View</a></li>
         <li><a href="manage_settings.html">Manage</a></li>
-        <li><a href="share_setttings.html">Share</a></li>
+        <li><a href="share_settings.html">Share</a></li>
       </ul>
     </nav>
 
