The current page's navbar shortcut is now disabled.

--- a/my-electron-app/pages/view_settings.html
+++ b/my-electron-app/pages/view_settings.html
@@ -10,7 +10,7 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="view_settings.html">View</a></li>
+        <li><a href="view_settings.html" class="disabled">View</a></li>
         <li><a href="manage_settings.html">Manage</a></li>
         <li><a href="share_settings.html">Share</a></li>
       </ul>
