--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="disabled">Home</a></li>
         <li><a href="pages/view_settings.html">View</a></li>
         <li><a href="pages/manage_settings.html">Manage</a></li>
         <li><a href="pages/share_settings.html">Share</a></li>
