--- a/my-electron-app/pages/view_settings.html
+++ b/my-electron-app/pages/view_settings.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../styles.css">
   </head>
 
-  <body> 
+  <body>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -17,7 +17,33 @@
     </nav>
 
     <div id="container" style="text-align: center;">
-      <h2>Work in progress...</h2>
+      <div id="fileStatus"></div>
+      <div id="uploadSection" class="upload-section" style="display: none;">
+        <h3>Upload Game.ini File</h3>
+        <input type="file" id="fileInput" accept=".ini">
+      </div>
     </div>
+
+    <script>
+      async function checkGameIni() {
+        // Wait for it to check uploads. 
+        const files = await window.electronAPI.checkForUploads();
+        // Get the sections ready. 
+        const fileStatus = document.getElementById('fileStatus');
+        const uploadSection = document.getElementById('uploadSection');
+        
+        // Check if Game.ini exists.
+        if (files === "No files found" || !files.includes('Game.ini') || !files.includes('game.ini')) {
+          fileStatus.innerHTML = "<h2>No Game.ini file found.</h2>";
+          uploadSection.style.display = 'block';
+        } else { 
+          fileStatus.innerHTML = "<h2>Game.ini file found.</h2>";
+          uploadSection.style.display = 'none';
+        }
+      }
+
+      // Check for Game.ini when page loads.
+      window.addEventListener('DOMContentLoaded', checkGameIni);
+    </script>
   </body>
 </html>
