Can now read uploaded files and display on screen.

--- a/my-electron-app/pages/view_settings.html
+++ b/my-electron-app/pages/view_settings.html
@@ -18,12 +18,18 @@
     </nav>
 
     <div id="container" style="text-align: center;">
+      <!-- File uploading part. -->
       <div id="fileStatus"></div>
       <div id="uploadSection" class="upload-section" style="display: none;">
         <div class="file-input-wrapper">
           <input type="file" id="fileInput" accept=".ini">
           <button id="uploadButton" onclick="uploadSelected()">Upload</button>
         </div>
+      </div>
+
+      <!-- File content part. -->
+      <div id="fileContentSection">
+        
       </div>
     </div>
   </body>
