--- a/my-electron-app/pages/view_settings.html
+++ b/my-electron-app/pages/view_settings.html
@@ -18,19 +18,17 @@
     </nav>
 
     <div id="container" style="text-align: center;">
-      <!-- File uploading part. -->
+      <!-- File adding part. -->
       <div id="fileStatus"></div>
-      <div id="uploadSection" class="upload-section" style="display: none;">
-        <div class="file-input-wrapper">
+      <div id="addFiles" class="add-section" style="display: none;">
+        <div class="file-input">
           <input type="file" id="fileInput" accept=".ini">
-          <button id="uploadButton" onclick="uploadSelected()">Upload</button>
+          <button id="addFilesButton" onclick="addSelectedFile()">Add File</button>
         </div>
       </div>
 
       <!-- File content part. -->
-      <div id="fileContentSection">
-        
-      </div>
+      <div id="fileContents"></div>
     </div>
   </body>
 </html>
