--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -11,7 +11,6 @@
       <ul>
         <li><a href="index.html" class="disabled">Home</a></li>
         <li><a href="pages/view_settings.html">View</a></li>
-        <li><a href="pages/manage_settings.html">Manage</a></li>
         <li><a href="pages/share_settings.html">Share</a></li>
       </ul>
     </nav>
@@ -31,15 +30,7 @@
       <div class="tile">
         <button onclick="location.href='pages/view_settings.html'">
           <h2>View Settings</h2>
-          <p>View and analyse your ARK settings.</p>
-        </button>
-      </div>
-
-      <!-- Manage Tile -->
-      <div class="tile">
-        <button onclick="location.href='pages/manage_settings.html'">
-          <h2>Manage Settings</h2>
-          <p>Manage and configure your ARK settings.</p>
+          <p>View and manage your ARK settings.</p>
         </button>
       </div>
 
