--- a/my-electron-app/src/pages/share_settings.html
+++ b/my-electron-app/src/pages/share_settings.html
@@ -11,7 +11,7 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="view_settings.html">View</a></li>
-        <li><a href="share_setttings.html" class="disabled">Share</a></li>
+        <li><a href="share_settings.html" class="disabled">Share</a></li>
       </ul>
     </nav>
 
