--- a/my-electron-app/src/pages/view_settings.html
+++ b/my-electron-app/src/pages/view_settings.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Viewing ARK Settings</title>
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="view_settings.css">
     <script src="view_settings.js"></script>
   </head>
 
