Fixed buttons not appearing on file add. Enhanced the raw view. ItemStatClamp now shows text for inner values.

--- a/my-electron-app/src/pages/view_settings.html
+++ b/my-electron-app/src/pages/view_settings.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       
-      <div id="styleButtons" style="display: none; text-align:left; padding-left: 20px; padding-top: 20px;">
+      <div id="styleButtons" style="margin: 20px;">
         <button id="viewPretty" onclick="displayFileContent('Game.ini', 'pretty')">View Pretty</button>
         <button id="viewRaw" onclick="displayFileContent('Game.ini', 'raw')">View Raw</button>
       </div>
