Added a button to change which file you're working on.

--- a/my-electron-app/src/pages/view_settings.html
+++ b/my-electron-app/src/pages/view_settings.html
@@ -27,9 +27,11 @@
         </div>
       </div>
       
-      <div id="styleButtons" style="margin: 20px;">
+      <div id="buttons" style="margin: 20px;">
         <button id="viewPretty" onclick="displayFileContent('Game.ini', 'pretty')">View Pretty</button>
         <button id="viewRaw" onclick="displayFileContent('Game.ini', 'raw')">View Raw</button>
+        <button id="changeFile" onclick="changeCurrentFile()">Change File</button>
+        <button id="saveFile">Save File</button>
       </div>
 
       <!-- File content part. -->
