Now works with any .ini file.

--- a/my-electron-app/src/pages/view_settings.html
+++ b/my-electron-app/src/pages/view_settings.html
@@ -28,8 +28,8 @@
       </div>
       
       <div id="buttons" style="margin: 20px;">
-        <button id="viewPretty" onclick="displayFileContent('Game.ini', 'pretty')">View Pretty</button>
-        <button id="viewRaw" onclick="displayFileContent('Game.ini', 'raw')">View Raw</button>
+        <button id="viewPretty" onclick="getCurrentFileAndDisplay('pretty')">View Pretty</button>
+        <button id="viewRaw" onclick="getCurrentFileAndDisplay('raw')">View Raw</button>
         <button id="changeFile" onclick="changeCurrentFile()">Change File</button>
         <button id="saveFile">Save File</button>
       </div>
