Save button uses the right onclick function now.

--- a/my-electron-app/src/pages/view_settings.html
+++ b/my-electron-app/src/pages/view_settings.html
@@ -31,7 +31,7 @@
         <button id="viewPretty" onclick="getCurrentFileAndDisplay('pretty')">View Pretty</button>
         <button id="viewRaw" onclick="getCurrentFileAndDisplay('raw')">View Raw</button>
         <button id="changeFile" onclick="changeCurrentFile()">Change File</button>
-        <button id="saveFile">Save File</button>
+        <button id="saveFile" onclick="saveCurrentFile()">Save File</button>
       </div>
 
       <!-- File content part. -->
