Installed a code formatter VS Code extension.

--- a/my-electron-app/src/index.html
+++ b/my-electron-app/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>ARK Settings</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
 
   <body>
@@ -15,15 +15,18 @@
         <li><a href="pages/share_settings.html">Share</a></li>
       </ul>
     </nav>
-    
+
     <!-- Welcome message -->
-    <div id="container" style="text-align: center;">
-      <h1> ARK Settings </h1>
-      <p>This app will let you view your current settings, manage them and/or share your ARK settings with other users. 😁</p>
+    <div id="container" style="text-align: center">
+      <h1>ARK Settings</h1>
+      <p>
+        This app will let you view your current settings, manage them and/or
+        share your ARK settings with other users. 😁
+      </p>
       <p>Please select one of the options below to begin.</p>
     </div>
 
-    <br><br><br>
+    <br /><br /><br />
 
     <!-- Tiles -->
     <div class="tile-container">
