--- a/my-electron-app/src/pages/share_settings.html
+++ b/my-electron-app/src/pages/share_settings.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Sharing ARK Settings</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styles.css" />
   </head>
 
-  <body> 
+  <body>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -15,7 +15,7 @@
       </ul>
     </nav>
 
-    <div id="container" style="text-align: center;">
+    <div id="container" style="text-align: center">
       <h2>Work in progress...</h2>
     </div>
   </body>
