Moved share and view files in to their own folders to prep for splitting in to modules.

--- a/my-electron-app/src/index.html
+++ b/my-electron-app/src/index.html
@@ -11,8 +11,8 @@
     <nav>
       <ul>
         <li><a href="index.html" class="disabled">Home</a></li>
-        <li><a href="pages/view_settings.html">View</a></li>
-        <li><a href="pages/share_settings.html">Share</a></li>
+        <li><a href="pages/view_page/view.html">View</a></li>
+        <li><a href="pages/share_page/share.html">Share</a></li>
       </ul>
     </nav>
 
@@ -32,7 +32,7 @@
     <div class="tile-container">
       <!-- View Tile -->
       <div class="tile">
-        <button onclick="location.href='pages/view_settings.html'">
+        <button onclick="location.href='pages/view_page/view.html'">
           <h2>View Settings</h2>
           <p>View and manage your ARK settings.</p>
         </button>
@@ -40,7 +40,7 @@
 
       <!-- Share Tile -->
       <div class="tile">
-        <button onclick="location.href='pages/share_settings.html'">
+        <button onclick="location.href='pages/share_page/share.html'">
           <h2>Share Settings</h2>
           <p>Share your ARK settings with others.</p>
         </button>
