--- a/my-electron-app/src/pages/share_page/share.html
+++ b/my-electron-app/src/pages/share_page/share.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sharing ARK Settings</title>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../../styles.css" />
   </head>
 
   <body>
+    <!-- Nav bar at the top of the screen. -->
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="view_settings.html">View</a></li>
-        <li><a href="share_settings.html" class="disabled">Share</a></li>
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="../view_page/view.html">View</a></li>
+        <li><a href="share.html" class="disabled">Share</a></li>
       </ul>
     </nav>
 
