--- a/my-electron-app/src/pages/view_page/view.html
+++ b/my-electron-app/src/pages/view_page/view.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Viewing ARK Settings</title>
-    <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="view_settings.css" />
-    <script src="view_settings.js"></script>
+    <link rel="stylesheet" href="../../styles.css" />
+    <link rel="stylesheet" href="view.css" />
+    <script src="view.js"></script>
   </head>
 
   <body>
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="view_settings.html" class="disabled">View</a></li>
-        <li><a href="share_settings.html">Share</a></li>
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="view.html" class="disabled">View</a></li>
+        <li><a href="../share_page/share.html">Share</a></li>
       </ul>
     </nav>
 
