Changed a setting in my file formatting extension.

--- a/my-electron-app/src/pages/view_page/view.html
+++ b/my-electron-app/src/pages/view_page/view.html
@@ -35,10 +35,7 @@
       </div>
 
       <!-- File content part. -->
-      <div
-        id="fileContents"
-        style="display: none; text-align: left; padding-left: 20px"
-      ></div>
+      <div id="fileContents" style="display: none; text-align: left; padding-left: 20px"></div>
     </div>
   </body>
 </html>
