--- a/my-electron-app/src/index.html
+++ b/my-electron-app/src/index.html
@@ -20,8 +20,8 @@
     <div id="container" style="text-align: center">
       <h1>ARK Settings</h1>
       <p>
-        This app will let you view your current settings, manage them and/or
-        share your ARK settings with other users. 😁
+        This app will let you view your current settings, manage them and/or share your ARK settings with other users.
+        😁
       </p>
       <p>Please select one of the options below to begin.</p>
     </div>
