--- a/my-electron-app/src/index.html
+++ b/my-electron-app/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ARK Settings</title>
+    <title>ARK Config File Manager</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="index.css" />
+    <script>console.log("Navigated to Home page. ");</script>
   </head>
 
   <body>
@@ -18,7 +19,7 @@
 
     <!-- Welcome message -->
     <div id="container" style="text-align: center">
-      <h1>ARK Settings</h1>
+      <h1>ARK Config File Manager</h1>
       <p>
         This app will let you view your current settings, manage them and/or share your ARK settings with other users.
         😁
