--- a/my-electron-app/src/pages/share_page/share.html
+++ b/my-electron-app/src/pages/share_page/share.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <title>Sharing ARK Settings</title>
     <link rel="stylesheet" href="../../styles.css" />
+    <link rel="stylesheet" href="share.css" />
+    <script>console.log("Navigated to Share page. ");</script>
+    <script type="module" src="share.js"></script>
   </head>
 
   <body>
