--- a/my-electron-app/src/pages/view_page/view.html
+++ b/my-electron-app/src/pages/view_page/view.html
@@ -5,6 +5,7 @@
     <title>Viewing ARK Settings</title>
     <link rel="stylesheet" href="../../styles.css" />
     <link rel="stylesheet" href="view.css" />
+    <script>console.log("Navigated to View page. ");</script>
     <script type="module" src="view.js"></script>
   </head>
 
