Button visual redesign.

--- a/my-electron-app/src/pages/share_page/share.html
+++ b/my-electron-app/src/pages/share_page/share.html
@@ -5,7 +5,9 @@
     <title>Sharing ARK Settings</title>
     <link rel="stylesheet" href="../../styles.css" />
     <link rel="stylesheet" href="share.css" />
-    <script>console.log("Navigated to Share page. ");</script>
+    <script>
+      console.log("Navigated to Share page. ");
+    </script>
     <script type="module" src="share.js"></script>
   </head>
 
@@ -16,6 +18,7 @@
         <li><a href="../../index.html">Home</a></li>
         <li><a href="../view_page/view.html">View</a></li>
         <li><a href="share.html" class="disabled">Share</a></li>
+        <li><a href="../account_page/account.html">Account</a></li>
       </ul>
     </nav>
 
