--- a/my-electron-app/src/index.html
+++ b/my-electron-app/src/index.html
@@ -5,7 +5,9 @@
     <title>ARK Config File Manager</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="index.css" />
-    <script>console.log("Navigated to Home page. ");</script>
+    <script>
+      console.log("Navigated to Home page. ");
+    </script>
   </head>
 
   <body>
@@ -14,6 +16,7 @@
         <li><a href="index.html" class="disabled">Home</a></li>
         <li><a href="pages/view_page/view.html">View</a></li>
         <li><a href="pages/share_page/share.html">Share</a></li>
+        <li><a href="pages/account_page/account.html">Account</a></li>
       </ul>
     </nav>
 
