--- a/my-electron-app/src/pages/view_page/view.html
+++ b/my-electron-app/src/pages/view_page/view.html
@@ -5,7 +5,9 @@
     <title>Viewing ARK Settings</title>
     <link rel="stylesheet" href="../../styles.css" />
     <link rel="stylesheet" href="view.css" />
-    <script>console.log("Navigated to View page. ");</script>
+    <script>
+      console.log("Navigated to View page. ");
+    </script>
     <script type="module" src="view.js"></script>
   </head>
 
@@ -15,6 +17,7 @@
         <li><a href="../../index.html">Home</a></li>
         <li><a href="view.html" class="disabled">View</a></li>
         <li><a href="../share_page/share.html">Share</a></li>
+        <li><a href="../account_page/account.html">Account</a></li>
       </ul>
     </nav>
 
