Added user registration but has no input validation yet.

--- a/my-electron-app/src/pages/account_page/account.html
+++ b/my-electron-app/src/pages/account_page/account.html
@@ -39,7 +39,7 @@
               <input type="password" id="password" placeholder="Password" required />
             </div>
             <button type="submit" class="auth-button">Login</button>
-            <button type="button" class="auth-button" id="registerButton">Register</button>
+            <button type="submit" class="auth-button" id="registerButton">Register</button>
           </form>
           <div id="errorMessage" class="error-message"></div>
         </div>
