--- a/my-electron-app/src/pages/account_page/account.html
+++ b/my-electron-app/src/pages/account_page/account.html
@@ -18,7 +18,7 @@
         <li><a href="../../index.html">Home</a></li>
         <li><a href="../view_page/view.html">View</a></li>
         <li><a href="../share_page/share.html">Share</a></li>
-        <li><a href="account.html" class="disabled">Account</a></li>
+        <li><a href="account.html" class="disabled" id="userEmailNavbar">Account</a></li>
       </ul>
     </nav>
 
