Beginnings of Share page.

--- a/my-electron-app/src/pages/share_page/share.html
+++ b/my-electron-app/src/pages/share_page/share.html
@@ -22,8 +22,17 @@
       </ul>
     </nav>
 
-    <div id="container" style="text-align: center">
-      <h2>Work in progress...</h2>
+    <div id="container">
+      <!-- Buttons part. -->
+      <div id="buttons">
+        <button id="shareFile">Share File</button>
+        <button id="myFiles">My Files</button>
+      </div>
+
+      <!-- Files part. -->
+      <div id="files">
+        <ul id="fileList"></ul>
+      </div>
     </div>
   </body>
 </html>
