Bigger text boxes for description.

--- a/my-electron-app/src/pages/share_page/share.html
+++ b/my-electron-app/src/pages/share_page/share.html
@@ -33,7 +33,7 @@
       <!-- Upload part. -->
       <form id="uploadSection">
         <input type="text" id="descriptionShort" placeholder="Name or brief description" maxlength="100" required />
-        <input type="text" id="descriptionLong" placeholder="Detailed description (optional)" maxlength="400" />
+        <textarea id="descriptionLong" placeholder="Detailed description (optional)" maxlength="400"></textarea>
         <input type="file" id="fileInput" required />
         <button type="submit" id="uploadButton">Upload</button>
       </form>
