--- a/my-electron-app/src/pages/view_page/view.html
+++ b/my-electron-app/src/pages/view_page/view.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self';" />
     <title>Viewing ARK Settings</title>
     <link rel="stylesheet" href="../../styles.css" />
     <link rel="stylesheet" href="view.css" />
-    <script>
-      console.log("Navigated to View page. ");
-    </script>
     <script type="module" src="view.js"></script>
   </head>
 
