Start of adding a remove mode.

--- a/my-electron-app/src/pages/view_page/view.html
+++ b/my-electron-app/src/pages/view_page/view.html
@@ -36,8 +36,14 @@
         <button id="changeFile">Change File</button>
         <button id="saveFile">Save File</button>
       </div>
+      <div id="buttons2ndRow">
+        <button id="addRow" class="green-button">Add New Setting</button>
+        <button id="removeRow" class="red-button">Toggle Remove Mode</button>
+        <p id="notifier">REMOVE MODE ENABLED. LEFT CLICK TO REMOVE.</p>
+      </div>
 
       <!-- File content part. -->
+      <br />
       <div id="fileContents"></div>
     </div>
   </body>
