Clarified that you're creating a new file when saving as.

--- a/my-electron-app/src/pages/view_page/view.html
+++ b/my-electron-app/src/pages/view_page/view.html
@@ -34,7 +34,7 @@
         <button id="viewPretty">View Pretty</button>
         <button id="viewRaw">View Raw</button>
         <button id="changeFile">Change File</button>
-        <button id="saveFile">Save File</button>
+        <button id="saveFile">Save File As</button>
       </div>
       <div id="buttons2ndRow">
         <button id="addRow" class="green-button">Add New Setting</button>
